Linkeo correcto en el navbar

--- a/index.html
+++ b/index.html
@@ -110,12 +110,12 @@
 					<!-- Main menu -->
 					<nav id="mainmenu">
 						<ul>
-							<li><a href="#">Casas</a></li>
-							<li><a href="#">Lifestyle</a></li>
+							<li><a href="portfolio.html">Casas</a></li>
+							<li><a href="lifestyle.html">Lifestyle</a></li>
 							<li><a href="#">Desarollos</a></li>
 							<li><a href="#">El Estudio</a>	<ul>
-									<li><a href="#">Quienes Somos</a></li>
-									<li><a href="#">Fotos</a></li>
+									<li><a href="quienesomos.html">Quienes Somos</a></li>
+									<li><a href="estudio.html">Fotos</a></li>
 								</ul>
 							</li>
 							<li><a href="#">Contacto</a></li>
