--- a/estudio.html
+++ b/estudio.html
@@ -4,7 +4,7 @@
 
 		<!-- Meta -->
 		<meta charset="UTF-8">
-		<title>PACIFICA | Casas</title>
+		<title>PACIFICA | El Estudio</title>
 		<meta name="keywords" content="Pacifica, Arquitectura, Ezequiel Gil">
 		<meta name="description" content="Pacifica - Estudio de Arquitectura">
 		<meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1">
