--- a/quienesomos.html
+++ b/quienesomos.html
@@ -4,7 +4,7 @@
 
 		<!-- Meta -->
 		<meta charset="UTF-8">
-		<title>PACIFICA | Casas</title>
+		<title>PACIFICA | Quienes somos</title>
 		<meta name="keywords" content="Pacifica, Arquitectura, Ezequiel Gil">
 		<meta name="description" content="Pacifica - Estudio de Arquitectura">
 		<meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1">
@@ -195,12 +195,12 @@
 					<!-- Main menu -->
 					<nav id="mainmenu">
 						<ul>
-							<li><a href="#" class="active">Casas</a></li>
-							<li><a href="#">Lifestyle</a></li>
+							<li><a href="portfolio.html">Casas</a></li>
+							<li><a href="lifestyle.html">Lifestyle</a></li>
 							<li><a href="#">Desarollos</a></li>
 							<li><a href="#">El Estudio</a>	<ul>
-									<li><a href="#">Quienes Somos</a></li>
-									<li><a href="#">Fotos</a></li>
+									<li><a href="quienesomos.html">Quienes Somos</a></li>
+									<li><a href="estudio.html">Fotos</a></li>
 								</ul>
 							</li>
 							<li><a href="#">Contacto</a></li>
