--- a/index.html
+++ b/index.html
@@ -64,36 +64,44 @@
 			<div id="content">
 
 				<!-- Fullscreen slider -->
-				<div id="fullscreen-slider" class="swiper-container">
+				<div id="fullscreen-slider" class="swiper-container swiper-home" >
 					<div class="swiper-wrapper">
 
 						<!-- Slide -->
-						<div class="swiper-slide overlay overlay-grid-2">
+						<div class="swiper-slide overlay" >
 							<video  width="853" height="480" loop autoplay muted>
-								<source src="img/slides/waves.mp4" type="video/mp4">
+								<source src="img/slide-1.mp4" type="video/mp4">
 							</video>
-							<h1><img src="img/logo-w.png" alt=""></h1>
 						</div>
 
 						<!-- Slide -->
-						<div class="swiper-slide overlay overlay-dark-25" style="background-image: url(img/slides/slide-1.jpg)">
+						<div class="swiper-slide overlay overlay-dark-25" style="background-image: url(img/slide-2.jpg)">
 							<!-- <h1>Less is more, more or less</h1> -->
 						</div>
 
+
+
 						<!-- Slide -->
-						<div class="swiper-slide overlay overlay-dark-50" style="background-image: url(img/slides/slide-2.jpg)">
+						<div class="swiper-slide overlay overlay-dark-50" style="background-image: url(img/slide-3.jpg)">
 							<!-- <h1>Robust, clean, comfortable</h1> -->
 						</div>
 
 						<!-- Slide -->
-						<div class="swiper-slide overlay overlay-dark-25" style="background-image: url(img/slides/slide-3.jpg)">
+						<div class="swiper-slide overlay overlay-dark-25" style="background-image: url(img/slide-4.jpg)">
+							<!-- <h1>Showcase your work with Rayleigh</h1> -->
+						</div>
+
+						<!-- Slide -->
+						<div class="swiper-slide overlay overlay-dark-25" style="background-image: url(img/slide-5.jpg)">
 							<!-- <h1>Showcase your work with Rayleigh</h1> -->
 						</div>
 
 						<!-- Slide -->
 						<div class="swiper-slide overlay overlay-grid-2">
-							<video src="img/slides/slide-4.mp4" width="853" height="480" loop></video>
-							<h1></h1>
+							<video  width="853" height="480" loop autoplay muted>
+								<source src="img/slide-6.mp4" type="video/mp4">
+							</video>
+							<h1>CASA CINCO FUEGOS</h1>
 						</div>
 
 					</div>
@@ -138,10 +146,11 @@
 		<!-- JavaScripts -->
 		<script type='text/javascript' src='js/jquery.min.js'></script>
 		<script type='text/javascript' src='js/bootstrap.min.js'></script>
-		<script type='text/javascript' src='js/swiper/idangerous.swiper.min.js'></script>
+		<script type='text/javascript' src="./js/swiper/idangerous.swiper.min.js"></script>
 		<script type='text/javascript' src='js/masonry/masonry.pkgd.min.js'></script>
 		<script type='text/javascript' src='js/isotope/jquery.isotope.min.js'></script>
 		<script type='text/javascript' src='js/custom.js'></script>
+
 
 	</body>
 </html>
