Tipografía nueva en las casas. Disposición nueva del recuadro de información en la galería de las casas.

--- a/portfolio.html
+++ b/portfolio.html
@@ -21,7 +21,7 @@
 		<link rel="stylesheet" href="css/reset.css">
 		<link rel="stylesheet" href="css/bootstrap.min.css">
 		<link rel="stylesheet" href="css/font-awesome.min.css">
-		<link href="http://fonts.googleapis.com/css?family=Raleway:300|Muli:300" rel="stylesheet" type="text/css">
+		<link href="http://fonts.googleapis.com/css?family=Nunito+Sans:400,700|Muli:300|Oswald:400" rel="stylesheet" type="text/css">
 		<link rel="stylesheet" href="css/idangerous.swiper.css">
 		<link rel="stylesheet" href="css/style.css">
 
@@ -94,55 +94,55 @@
 
 						<!-- Portfolio item -->
 						<article class="portfolio isotope-item  col-4">
-							<a href="#cincofuegos" class="image" style="background-image: url(img/portfolio-images/cincofuegos_portada.jpg)"></a>
+							<a href="#cincofuegos" class="image" style="background-image: url(img/casas/cincofuegos_portada.jpg)"></a>
 
 						</article>
 
 						<!-- Portfolio item -->
 						<article class="portfolio isotope-item  col-4">
-							<a href="#crystal" class="image" style="background-image: url(img/portfolio-images/crystal_portada.jpg)"></a>
+							<a href="#crystal" class="image" style="background-image: url(img/casas/crystal_portada.jpg)"></a>
 
 						</article>
 
 						<!-- Portfolio item -->
 						<article class="portfolio isotope-item  col-4">
-							<a href="#eldescanso" class="image" style="background-image: url(img/portfolio-images/eldescanso_portada.jpg)"></a>
+							<a href="#eldescanso" class="image" style="background-image: url(img/casas/eldescanso_portada.jpg)"></a>
 
 						</article>
 
 						<!-- Portfolio item -->
 						<article class="portfolio isotope-item  col-4">
-							<a href="#portfolio-item-example" class="image" style="background-image: url(img/portfolio-images/ironhaus_portada.jpg)"></a>
+							<a href="#portfolio-item-example" class="image" style="background-image: url(img/casas/ironhaus_portada.jpg)"></a>
 
 						</article>
 
 						<!-- Portfolio item -->
 						<article class="portfolio isotope-item  col-4">
-							<a href="#portfolio-item-example" class="image" style="background-image: url(img/portfolio-images/mahimahi_portada.jpg)"></a>
+							<a href="#portfolio-item-example" class="image" style="background-image: url(img/casas/mahimahi_portada.jpg)"></a>
 
 						</article>
 
 						<!-- Portfolio item -->
 						<article class="portfolio isotope-item  col-4">
-							<a href="#portfolio-item-example" class="image" style="background-image: url(img/portfolio-images/pacific_portada.jpg)"></a>
+							<a href="#portfolio-item-example" class="image" style="background-image: url(img/casas/pacific_portada.jpg)"></a>
 
 						</article>
 
 						<!-- Portfolio item -->
 						<article class="portfolio isotope-item col-4">
-							<a href="#portfolio-item-example" class="image" style="background-image: url(img/portfolio-images/salsabrava_portada.jpg)"></a>
+							<a href="#portfolio-item-example" class="image" style="background-image: url(img/casas/salsabrava_portada.jpg)"></a>
 
 						</article>
 
 						<!-- Portfolio item -->
 						<article class="portfolio isotope-item  col-4">
-							<a href="#portfolio-item-example" class="image" style="background-image: url(img/portfolio-images/santapaula_portada.jpg)"></a>
+							<a href="#portfolio-item-example" class="image" style="background-image: url(img/casas/santapaula_portada.jpg)"></a>
 
 						</article>
 
 						<!-- Portfolio item -->
 						<article class="portfolio isotope-item  col-4">
-							<a href="#portfolio-item-example" class="image" style="background-image: url(img/portfolio-images/dosmares_portada.jpg)"></a>
+							<a href="#portfolio-item-example" class="image" style="background-image: url(img/casas/dosmares_portada.jpg)"></a>
 
 						</article>
 
@@ -206,14 +206,13 @@
 				<!-- Portfolio description -->
 				<div class="portfolio-description">
 					<h3>CINCO FUEGOS</h3>
-					<p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Vivamus quis libero erat. Integer ac purus est. Proin erat mi, pulvinar ut magna eget, consectetur auctor turpis.</p>
 					<div class="icon-text">
-						<i class="fa fa-calendar-o"></i>
-						<p>Proyecto comenzado el 10/10/10</p>
+						<i class="fa fa-map-marker"></i>
+						<p>Buenos Aires - 250 M2</p>
 					</div>
 					<div class="icon-text">
 						<i class="fa fa-users"></i>
-						<p>8 personas involucradas</p>
+						<p>Construcción: Insaco S.A</p>
 					</div>
 
 				</div>
@@ -224,22 +223,22 @@
 					<div class="swiper-wrapper">
 
 						<!-- Slide -->
-						<div class="swiper-slide" style="background-image: url(img/portfolio-images/cincofuegos_01.jpg)"></div>
-						<div class="swiper-slide" style="background-image: url(img/portfolio-images/cincofuegos_02.jpg)"></div>
-						<div class="swiper-slide" style="background-image: url(img/portfolio-images/cincofuegos_03.jpg)"></div>
-						<div class="swiper-slide" style="background-image: url(img/portfolio-images/cincofuegos_04.jpg)"></div>
-						<div class="swiper-slide" style="background-image: url(img/portfolio-images/cincofuegos_05.jpg)"></div>
-						<div class="swiper-slide" style="background-image: url(img/portfolio-images/cincofuegos_06.jpg)"></div>
-						<div class="swiper-slide" style="background-image: url(img/portfolio-images/cincofuegos_07.jpg)"></div>
-						<div class="swiper-slide" style="background-image: url(img/portfolio-images/cincofuegos_08.jpg)"></div>
-						<div class="swiper-slide" style="background-image: url(img/portfolio-images/cincofuegos_09.jpg)"></div>
-						<div class="swiper-slide" style="background-image: url(img/portfolio-images/cincofuegos_10.jpg)"></div>
-						<div class="swiper-slide" style="background-image: url(img/portfolio-images/cincofuegos_11.jpg)"></div>
-						<div class="swiper-slide" style="background-image: url(img/portfolio-images/cincofuegos_12.jpg)"></div>
-						<div class="swiper-slide" style="background-image: url(img/portfolio-images/cincofuegos_13.jpg)"></div>
-						<div class="swiper-slide" style="background-image: url(img/portfolio-images/cincofuegos_14.jpg)"></div>
-						<div class="swiper-slide" style="background-image: url(img/portfolio-images/cincofuegos_15.jpg)"></div>
-						<div class="swiper-slide" style="background-image: url(img/portfolio-images/cincofuegos_16.jpg)"></div>
+						<div class="swiper-slide" style="background-image: url(img/casas/cincofuegos_01.jpg)"></div>
+						<div class="swiper-slide" style="background-image: url(img/casas/cincofuegos_02.jpg)"></div>
+						<div class="swiper-slide" style="background-image: url(img/casas/cincofuegos_03.jpg)"></div>
+						<div class="swiper-slide" style="background-image: url(img/casas/cincofuegos_04.jpg)"></div>
+						<div class="swiper-slide" style="background-image: url(img/casas/cincofuegos_05.jpg)"></div>
+						<div class="swiper-slide" style="background-image: url(img/casas/cincofuegos_06.jpg)"></div>
+						<div class="swiper-slide" style="background-image: url(img/casas/cincofuegos_07.jpg)"></div>
+						<div class="swiper-slide" style="background-image: url(img/casas/cincofuegos_08.jpg)"></div>
+						<div class="swiper-slide" style="background-image: url(img/casas/cincofuegos_09.jpg)"></div>
+						<div class="swiper-slide" style="background-image: url(img/casas/cincofuegos_10.jpg)"></div>
+						<div class="swiper-slide" style="background-image: url(img/casas/cincofuegos_11.jpg)"></div>
+						<div class="swiper-slide" style="background-image: url(img/casas/cincofuegos_12.jpg)"></div>
+						<div class="swiper-slide" style="background-image: url(img/casas/cincofuegos_13.jpg)"></div>
+						<div class="swiper-slide" style="background-image: url(img/casas/cincofuegos_14.jpg)"></div>
+						<div class="swiper-slide" style="background-image: url(img/casas/cincofuegos_15.jpg)"></div>
+						<div class="swiper-slide" style="background-image: url(img/casas/cincofuegos_16.jpg)"></div>
 
 
 
