Nuevas portadas. 2do ej. de portfolio.

--- a/portfolio.html
+++ b/portfolio.html
@@ -21,7 +21,7 @@
 		<link rel="stylesheet" href="css/reset.css">
 		<link rel="stylesheet" href="css/bootstrap.min.css">
 		<link rel="stylesheet" href="css/font-awesome.min.css">
-		<link href="http://fonts.googleapis.com/css?family=Nunito+Sans:400,700|Muli:300|Oswald:400" rel="stylesheet" type="text/css">
+		<link href="http://fonts.googleapis.com/css?family=Nunito+Sans:400,700|Oswald:400" rel="stylesheet" type="text/css">
 		<link rel="stylesheet" href="css/idangerous.swiper.css">
 		<link rel="stylesheet" href="css/style.css">
 
@@ -95,55 +95,131 @@
 						<!-- Portfolio item -->
 						<article class="portfolio isotope-item  col-4">
 							<a href="#cincofuegos" class="image" style="background-image: url(img/casas/cincofuegos_portada.jpg)"></a>
-
 						</article>
 
 						<!-- Portfolio item -->
 						<article class="portfolio isotope-item  col-4">
 							<a href="#crystal" class="image" style="background-image: url(img/casas/crystal_portada.jpg)"></a>
-
 						</article>
 
 						<!-- Portfolio item -->
 						<article class="portfolio isotope-item  col-4">
 							<a href="#eldescanso" class="image" style="background-image: url(img/casas/eldescanso_portada.jpg)"></a>
-
 						</article>
 
 						<!-- Portfolio item -->
 						<article class="portfolio isotope-item  col-4">
 							<a href="#portfolio-item-example" class="image" style="background-image: url(img/casas/ironhaus_portada.jpg)"></a>
-
 						</article>
 
 						<!-- Portfolio item -->
 						<article class="portfolio isotope-item  col-4">
 							<a href="#portfolio-item-example" class="image" style="background-image: url(img/casas/mahimahi_portada.jpg)"></a>
-
 						</article>
 
 						<!-- Portfolio item -->
 						<article class="portfolio isotope-item  col-4">
 							<a href="#portfolio-item-example" class="image" style="background-image: url(img/casas/pacific_portada.jpg)"></a>
-
 						</article>
 
 						<!-- Portfolio item -->
 						<article class="portfolio isotope-item col-4">
 							<a href="#portfolio-item-example" class="image" style="background-image: url(img/casas/salsabrava_portada.jpg)"></a>
-
 						</article>
 
 						<!-- Portfolio item -->
 						<article class="portfolio isotope-item  col-4">
 							<a href="#portfolio-item-example" class="image" style="background-image: url(img/casas/santapaula_portada.jpg)"></a>
-
 						</article>
 
 						<!-- Portfolio item -->
 						<article class="portfolio isotope-item  col-4">
 							<a href="#portfolio-item-example" class="image" style="background-image: url(img/casas/dosmares_portada.jpg)"></a>
+						</article>
 
+						<!-- Portfolio item -->
+						<article class="portfolio isotope-item  col-4">
+							<a href="#portfolio-item-example" class="image" style="background-image: url(img/casas/180south_portada.jpg)"></a>
+						</article>
+
+						<!-- Portfolio item -->
+						<article class="portfolio isotope-item  col-4">
+							<a href="#portfolio-item-example" class="image" style="background-image: url(img/casas/animal_portada.jpg)"></a>
+						</article>
+
+						<!-- Portfolio item -->
+						<article class="portfolio isotope-item  col-4">
+							<a href="#portfolio-item-example" class="image" style="background-image: url(img/casas/beton_portada.jpg)"></a>
+						</article>
+
+						<!-- Portfolio item -->
+						<article class="portfolio isotope-item  col-4">
+							<a href="#portfolio-item-example" class="image" style="background-image: url(img/casas/chillbeach_portada.jpg)"></a>
+						</article>
+
+						<!-- Portfolio item -->
+						<article class="portfolio isotope-item  col-4">
+							<a href="#portfolio-item-example" class="image" style="background-image: url(img/casas/deau_portada.jpg)"></a>
+						</article>
+
+						<!-- Portfolio item -->
+						<article class="portfolio isotope-item  col-4">
+							<a href="#portfolio-item-example" class="image" style="background-image: url(img/casas/fly_cat.jpg)"></a>
+						</article>
+
+						<!-- Portfolio item -->
+						<article class="portfolio isotope-item  col-4">
+							<a href="#portfolio-item-example" class="image" style="background-image: url(img/casas/surfersparadise_portada.jpg)"></a>
+						</article>
+
+						<!-- Portfolio item -->
+						<article class="portfolio isotope-item  col-4">
+							<a href="#portfolio-item-example" class="image" style="background-image: url(img/casas/virazon_portada.jpg)"></a>
+						</article>
+
+						<!-- Portfolio item -->
+						<article class="portfolio isotope-item  col-4">
+							<a href="#portfolio-item-example" class="image" style="background-image: url(img/casas/alaia_portada.jpg)"></a>
+						</article>
+
+						<!-- Portfolio item -->
+						<article class="portfolio isotope-item  col-4">
+							<a href="#portfolio-item-example" class="image" style="background-image: url(img/casas/hut_portada.jpg)"></a>
+						</article>
+
+						<!-- Portfolio item -->
+						<article class="portfolio isotope-item  col-4">
+							<a href="#portfolio-item-example" class="image" style="background-image: url(img/casas/eleuthera_portada.jpg)"></a>
+						</article>
+
+						<!-- Portfolio item -->
+						<article class="portfolio isotope-item  col-4">
+							<a href="#portfolio-item-example" class="image" style="background-image: url(img/casas/lavista_portada.jpg)"></a>
+						</article>
+
+						<!-- Portfolio item -->
+						<article class="portfolio isotope-item  col-4">
+							<a href="#portfolio-item-example" class="image" style="background-image: url(img/casas/oldwoody_portada.jpg)"></a>
+						</article>
+
+						<!-- Portfolio item -->
+						<article class="portfolio isotope-item  col-4">
+							<a href="#portfolio-item-example" class="image" style="background-image: url(img/casas/pinebeach_portada.jpg)"></a>
+						</article>
+
+						<!-- Portfolio item -->
+						<article class="portfolio isotope-item  col-4">
+							<a href="#portfolio-item-example" class="image" style="background-image: url(img/casas/terrazas_portada.jpg)"></a>
+						</article>
+
+						<!-- Portfolio item -->
+						<article class="portfolio isotope-item  col-4">
+							<a href="#portfolio-item-example" class="image" style="background-image: url(img/casas/dosmares_portada.jpg)"></a>
+						</article>
+
+						<!-- Portfolio item -->
+						<article class="portfolio isotope-item  col-4">
+							<a href="#portfolio-item-example" class="image" style="background-image: url(img/casas/saldelima_portada.jpg)"></a>
 						</article>
 
 					</div>
@@ -223,7 +299,7 @@
 					<div class="swiper-wrapper">
 
 						<!-- Slide -->
-						<div class="swiper-slide" style="background-image: url(img/casas/cincofuegos_01.jpg)"></div>
+						<div class="swiper-slide" style="background-image: url(img/casas/cincofuegos_01.jpg);@media (max-width: 700px){background-image: url(img/casas/cincofuegos_01_mobile.jpg)}"></div>
 						<div class="swiper-slide" style="background-image: url(img/casas/cincofuegos_02.jpg)"></div>
 						<div class="swiper-slide" style="background-image: url(img/casas/cincofuegos_03.jpg)"></div>
 						<div class="swiper-slide" style="background-image: url(img/casas/cincofuegos_04.jpg)"></div>
