--- a/quienesomos.html
+++ b/quienesomos.html
@@ -80,107 +80,125 @@
 					<!-- Main content -->
 					<div class="row personal-profiles">
 
+
+
 						<!-- Personal profile -->
-						<article class="personal-profile col-12">
-							<div class="image" style="background-image: url(img/team-images/1.jpg)">
-								<div class="icons">
-									<a href="#" class="fa fa-facebook"></a>
-									<a href="#" class="fa fa-twitter"></a>
-									<a href="#" class="fa fa-instagram"></a>
-								</div>
-							</div>
+						<!-- <article class="portfolio team-card col-xs-12 col-sm-6 col-lg-4">
+							<div class="image" style="background-image: url(img/team/quienesomos_01.jpg)"></a>
 							<div class="inner">
 								<header>
-									<h3><address class="author fn">Ezquiel Gil</address></h3>
-									<h4>Arquitecto</h4>
+									<h3>Ezequiel Gil</h3>
+									<p>Arquitecto. Socio</p>
 								</header>
-								<p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Integer nec enim eros.</p>
+							</div>
+						</article> -->
+
+						<!-- Personal profile -->
+						<article class="personal-profile team-card col-12">
+							<div class="image" style="background-image: url(img/team/quienesomos_01.jpg)"></div>
+							<div class="inner">
+								<header>
+									<h3><address class="author fn">Ezequiel Gil</address></h3>
+									<h4>Arquitecto. Socio</h4>
+								</header>
+								<p>El Arq. Ezequiel Gil co-fundador del estudio entiende que la versatilidad y la arquitectura desde un punto de vista del disfrute son los aspectos fundamentales a la hora de crear. Pacífica considera sumamente importante escuchar las ideas de los clientes y su plan de necesidades para luego plasmarlo en el diseño. Se busca entender qué es lo que el usuario necesita para disfrutar del confort y calidez de su casa las 4 estaciones del año. <br>El corolario de todos estos factores (estética, diseño, lujo iluminación y funcionalidad) combinados equilibradamente arrojan un producto terminado de excelencia.</p>
 							</div>
 						</article>
 
 						<!-- Personal profile -->
-						<article class="personal-profile col-6">
-							<div class="image" style="background-image: url(img/team-images/2.jpg)">
-								<div class="icons">
-									<a href="#" class="fa fa-facebook"></a>
-									<a href="#" class="fa fa-twitter"></a>
-									<a href="#" class="fa fa-instagram"></a>
-								</div>
-							</div>
+						<article class="portfolio team-card col-xs-12 col-sm-6 col-lg-4">
+							<div class="image" style="background-image: url(img/team/quienesomos_02.jpg)"></div>
 							<div class="inner">
 								<header>
-									<h3><address class="author fn">Nombre Apellido</address></h3>
-									<h4>Posición</h4>
+									<h3>Félix Gil</h3>
+									<p>Ingeniero. Socio</p>
 								</header>
-								<p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Integer nec enim eros.</p>
 							</div>
 						</article>
 
 						<!-- Personal profile -->
-						<article class="personal-profile col-6">
-							<div class="image" style="background-image: url(img/team-images/3.jpg)">
-								<div class="icons">
-									<a href="#" class="fa fa-facebook"></a>
-									<a href="#" class="fa fa-twitter"></a>
-									<a href="#" class="fa fa-instagram"></a>
-								</div>
-							</div>
+						<article class="portfolio team-card col-xs-12 col-sm-6 col-lg-4">
+							<div class="image" style="background-image: url(img/team/quienesomos_03.jpg)"></div>
 							<div class="inner">
 								<header>
-									<h3><address class="author fn">Nombre Apellido</address></h3>
-									<h4>Posición</h4>
+									<h3>Verónica Jijena Sánchez</h3>
+									<p>Diseño de interiores</p>
 								</header>
-								<p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Integer nec enim eros.</p>
 							</div>
 						</article>
 
 						<!-- Personal profile -->
-						<article class="personal-profile col-6">
-							<div class="image" style="background-image: url(img/team-images/4.jpg)">
-								<div class="icons">
-									<a href="#" class="fa fa-facebook"></a>
-									<a href="#" class="fa fa-twitter"></a>
-									<a href="#" class="fa fa-instagram"></a>
-								</div>
-							</div>
+						<article class="portfolio team-card col-xs-12 col-sm-6 col-lg-4">
+							<div class="image" style="background-image: url(img/team/quienesomos_04.jpg)"></div>
 							<div class="inner">
 								<header>
-									<h3><address class="author fn">Nombre Apellido</address></h3>
-									<h4>Posición</h4>
+									<h3>Belén Putruele</h3>
+									<p>Arquitecta. Project Manager</p>
 								</header>
-								<p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Integer nec enim eros.</p>
 							</div>
 						</article>
-						<article class="personal-profile col-6">
-							<div class="image" style="background-image: url(img/team-images/5.jpg)">
-								<div class="icons">
-									<a href="#" class="fa fa-facebook"></a>
-									<a href="#" class="fa fa-twitter"></a>
-									<a href="#" class="fa fa-instagram"></a>
-								</div>
-							</div>
+
+						<!-- Personal profile -->
+						<article class="portfolio team-card col-xs-12 col-sm-6 col-lg-4">
+							<div class="image" style="background-image: url(img/team/quienesomos_05.jpg)"></div>
 							<div class="inner">
 								<header>
-									<h3><address class="author fn">Nombre Apellido</address></h3>
-									<h4>Posición</h4>
+									<h3>Martín Bayley</h3>
+									<p>Arquitecto. Departamento de obras</p>
 								</header>
-								<p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Integer nec enim eros.</p>
 							</div>
 						</article>
+
+						<!-- Personal profile -->
+						<article class="portfolio team-card col-xs-12 col-sm-6 col-lg-4">
+							<div class="image" style="background-image: url(img/team/quienesomos_05.jpg)"></div>
+							<div class="inner">
+								<header>
+									<h3>Gastón Vernengo Lima</h3>
+									<p>Arquitecto. Jefe de proyectos</p>
+								</header>
+							</div>
+						</article>
+
+						<!-- Personal profile -->
+						<article class="portfolio team-card col-xs-12 col-sm-6 col-lg-4">
+							<div class="image" style="background-image: url(img/team/quienesomos_05.jpg)"></div>
+							<div class="inner">
+								<header>
+									<h3>Milagros García Blanco</h3>
+									<p>Arquitecta</p>
+								</header>
+							</div>
+						</article>
+
+						<!-- Personal profile -->
+						<article class="portfolio team-card col-xs-12 col-sm-6 col-lg-4">
+							<div class="image" style="background-image: url(img/team/quienesomos_05.jpg)"></div>
+							<div class="inner">
+								<header>
+									<h3>Juana Sichiny</h3>
+									<p>Arquitecta</p>
+								</header>
+							</div>
+						</article>
+
+						<!-- Personal profile -->
+						<article class="portfolio team-card col-xs-12 col-sm-6 col-lg-4">
+							<div class="image" style="background-image: url(img/team/quienesomos_05.jpg)"></div>
+							<div class="inner">
+								<header>
+									<h3>Joaquín Primon</h3>
+									<p>Dibujante</p>
+								</header>
+							</div>
+						</article>
+
+
+
 
 					</div>
 
 					<!-- Pagination -->
-					<div class="pagination-row row">
-						<div class="col-12">
-
-							<ul class="pag">
-								<li><a href="#">Ver m&aacute;s</a></li>
-
-							</ul>
-
-						</div>
-					</div>
 
 				</div>
 
