--- a/index_v2.html
+++ b/index_v2.html
@@ -21,8 +21,11 @@
 		<link rel="stylesheet" href="css/bootstrap.min.css">
 		<link rel="stylesheet" href="css/font-awesome.min.css">
 		<link href="http://fonts.googleapis.com/css?family=Nunito+Sans:400,700|Oswald:400" rel="stylesheet" type="text/css">
-		<link rel="stylesheet" href="css/idangerous.swiper.css">
+		<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/Swiper/4.4.6/css/swiper.css">
 		<link rel="stylesheet" href="css/style.css">
+		<style>
+			.swiper-container {height:100vh}
+		</style>
 
 	</head>
 
@@ -68,8 +71,8 @@
 					<div class="swiper-wrapper">
 						<!-- Slide -->
 						<div class="swiper-slide overlay overlay-grid-2" >
-							<video src="img/slide-1.mp4" type="video/mp4" width="853" height="480" autoplay loop>
-								<source >
+							<video  src="img/slide-1.mp4" width="853" height="480" autoplay loop>
+								<!-- <source  type="video/mp4"> -->
 							</video>
 							<h1><img src="./img/logo-w.png" alt=""></h1>
 						</div>
@@ -91,12 +94,16 @@
 						</div>
 						<!-- Slide -->
 						<div class="swiper-slide overlay overlay-grid-2">
-							<video src="img/slide-6.mp4" width="853" height="480" autoplay loop >								
+							<video src="img/slide-6.mp4" width="853" height="480" autoplay loop >
+								<!-- <source  type="video/mp4"> -->
 							</video>
 							<h1>CASA CINCO FUEGOS</h1>
 						</div>
 
 					</div>
+
+					<div class="swiper-pagination"></div>
+
 				</div>
 
 			</div>
@@ -138,10 +145,37 @@
 		<!-- JavaScripts -->
 		<script type='text/javascript' src='js/jquery.min.js'></script>
 		<script type='text/javascript' src='js/bootstrap.min.js'></script>
-		<script type='text/javascript' src="./js/swiper/idangerous.swiper.min.js"></script>
+		<script type='text/javascript' src="https://cdnjs.cloudflare.com/ajax/libs/Swiper/4.4.6/js/swiper.js"></script>
 		<script type='text/javascript' src='js/masonry/masonry.pkgd.min.js'></script>
 		<script type='text/javascript' src='js/isotope/jquery.isotope.min.js'></script>
 		<script type='text/javascript' src='js/custom.js'></script>
+		<script type="text/javascript">
+  var mySwiper = new Swiper ('.swiper-home', {
+    // Optional parameters
+    direction: 'horizontal',
+    loop: true,
+				autoplay: {
+        delay: 4000,
+        disableOnInteraction: true,
+      },
+
+    // If we need pagination
+    pagination: {
+      el: '.swiper-pagination',
+    },
+
+    // Navigation arrows
+    navigation: {
+      nextEl: '.swiper-button-next',
+      prevEl: '.swiper-button-prev',
+    },
+
+    // And if we need scrollbar
+    scrollbar: {
+      el: '.swiper-scrollbar',
+    },
+  });
+  </script>
 
 
 	</body>
