--- a/index.html
+++ b/index.html
@@ -68,31 +68,28 @@
 					<div class="swiper-wrapper">
 						<!-- Slide -->
 						<div class="swiper-slide overlay overlay-grid-2" >
-							<video src="img/slide-1.mp4" type="video/mp4" width="853" height="480" autoplay loop>
-								<source >
-							</video>
+							<video src="img/slide_1.mp4" type="video/mp4" width="853" height="480" autoplay loop></video>
 							<h1><img src="./img/logo-w.png" alt=""></h1>
 						</div>
 						<!-- Slide -->
-						<div class="swiper-slide overlay " style="background-image: url('img/slide-2.jpg')">
+						<div class="swiper-slide overlay " style="background-image: url('img/slide_2.jpg')">
 							<!-- <h1>Less is more, more or less</h1> -->
 						</div>
 						<!-- Slide -->
-						<div class="swiper-slide overlay " style="background-image: url('img/slide-3.jpg')">
+						<div class="swiper-slide overlay " style="background-image: url('img/slide_3.jpg')">
 							<!-- <h1>Robust, clean, comfortable</h1> -->
 						</div>
 						<!-- Slide -->
-						<div class="swiper-slide overlay " style="background-image: url('img/slide-4.jpg')">
+						<div class="swiper-slide overlay " style="background-image: url('img/slide_4.jpg')">
 							<!-- <h1>Showcase your work with Rayleigh</h1> -->
 						</div>
 						<!-- Slide -->
-						<div class="swiper-slide overlay " style="background-image: url('img/slide-5.jpg')">
+						<div class="swiper-slide overlay " style="background-image: url('img/slide_5.jpg')">
 							<!-- <h1>Showcase your work with Rayleigh</h1> -->
 						</div>
 						<!-- Slide -->
 						<div class="swiper-slide overlay overlay-grid-2">
-							<video src="img/slide-6.mp4" width="853" height="480" autoplay loop >								
-							</video>
+							<video src="img/slide_6.mp4" width="853" height="480" autoplay loop ></video>
 							<h1>CASA CINCO FUEGOS</h1>
 						</div>
 
