--- a/index.html
+++ b/index.html
@@ -68,7 +68,7 @@
 					<div class="swiper-wrapper">
 						<!-- Slide -->
 						<div class="swiper-slide overlay overlay-grid-2" >
-							<video src="img/slide_1.mp4" type="video/mp4" width="853" height="480" autoplay loop></video>
+							<video src="img/slide_1.ogg" type="video/ogg" width="853" height="480" autoplay loop></video>
 							<h1><img src="./img/logo-w.png" alt=""></h1>
 						</div>
 						<!-- Slide -->
@@ -89,7 +89,7 @@
 						</div>
 						<!-- Slide -->
 						<div class="swiper-slide overlay overlay-grid-2">
-							<video src="img/slide_6.mp4" width="853" height="480" autoplay loop ></video>
+							<video src="img/slide_6.ogg" type="video/ogg" width="853" height="480" autoplay loop ></video>
 							<h1>CASA CINCO FUEGOS</h1>
 						</div>
 
