--- a/index.html
+++ b/index.html
@@ -29,9 +29,9 @@
 	<body>
 
 		<!-- Preloader -->
-		<div id="preloader">
+		<!-- <div id="preloader">
 			<div id="status"></div>
-		</div>
+		</div> -->
 
 		<!-- Overlay -->
 		<div id="overlay"></div>
