--- a/index.html
+++ b/index.html
@@ -68,7 +68,7 @@
 					<div class="swiper-wrapper">
 						<!-- Slide -->
 						<div class="swiper-slide overlay overlay-grid-2" >
-							<video width="853" height="480" playsinline autobuffer autoplay loop>
+							<video id="wave" width="853" height="480" playsinline autobuffer autoplay loop>
 								<source  src="img/slide_1.ogg" type="video/ogg" >
 								<source  src="img/slide_1.mp4" type="video/mp4" >
 								<source  src="img/slide_1.webm" type="video/webm" >
@@ -93,7 +93,7 @@
 						</div>
 						<!-- Slide -->
 						<div class="swiper-slide overlay overlay-grid-2">
-							<video width="853" height="480" playsinline autobuffer autoplay loop>
+							<video id="casa" width="853" height="480" playsinline autobuffer autoplay loop>
 								<source  src="img/slide_6.ogg" type="video/ogg" >
 								<source  src="img/slide_6.mp4" type="video/mp4" >
 								<source  src="img/slide_6.webm" type="video/webm" >
