--- a/desarollos.html
+++ b/desarollos.html
@@ -4,7 +4,7 @@
 
 		<!-- Meta -->
 		<meta charset="UTF-8">
-		<title>PACIFICA | Lifestyle</title>
+		<title>PACIFICA | Desarrollos</title>
 		<meta name="keywords" content="Pacifica, Arquitectura, Ezequiel Gil">
 		<meta name="description" content="Pacifica - Estudio de Arquitectura">
 		<meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1">
@@ -29,11 +29,6 @@
 
 	<body>
 
-		<!-- Preloader -->
-		<div id="preloader">
-			<div id="status"></div>
-		</div>
-
 		<!-- Overlay -->
 		<div id="overlay"></div>
 
@@ -45,7 +40,7 @@
 
 			<!-- Logo -->
 			<header id="logo">
-							<a href="index.html"><img src="img/logo.png" alt=""></a>
+								<a href="index.html"><img src="img/logo.png" alt=""></a>
 				<!-- <h1>Pacifica</h1>
 				<h2>Ezequiel Gil <strong>Arquitecto</strong></h2> -->
 			</header>
@@ -69,65 +64,41 @@
 						<div class="filter col-12">
 
 							<header>
-								<h1>Lifestyle</h1>
+								<h1>Desarrollos</h1>
 								<h2></h2>
 							</header>
+
 
 
 						</div>
 					</div>
 
 					<!-- Main content -->
-					<div class="row">
+					<div class=" row">
 
+						<!-- Portfolio item -->
+						<article class="portfolio col-xs-12 col-sm-6 col-md-4">
+							<a href="#jingenieros" class="image" style="background-image: url(img/desarrollos/jingenierios_portada.jpg)"></a>
+						</article>
 
+						<!-- Portfolio item -->
+						<article class="portfolio col-xs-12 col-sm-6 col-md-4">
+							<a href="" class="image" style="background-image: url(img/desarrollos/brasil_portada.jpg)"></a>
+						</article>
 
+						<!-- Portfolio item -->
+						<article class="portfolio col-xs-12 col-sm-6 col-md-4">
+							<a href="" class="image" style="background-image: url(img/desarrollos/rincon_portada.jpg)"></a>
+						</article>
 
-						<div class="col-6" style="text-align: center;">
-							<img  class="image gallery-grid" src="img/lifestyle/lifestyle_09.jpg" alt="">
-						</div>
-						<div class="col-6" style="text-align: center;">
-							<img  class="image gallery-grid" src="img/lifestyle/lifestyle_10.jpg" alt="">
-						</div>
-						<div class="col-3" style="text-align: center;">
-							<img height="660" class="image gallery-grid" src="img/lifestyle/lifestyle_02.jpg" alt="">
-						</div>
-						<div class="col-3" style="text-align: center;">
-							<img height="660" class="image gallery-grid" src="img/lifestyle/lifestyle_06.jpg" alt="">
-						</div>
-						<div class="col-6" style="text-align: center;">
-							<img  class="image gallery-grid" src="img/lifestyle/lifestyle_11.jpg" alt="">
-						</div>
-						<div class="col-6" style="text-align: center;">
-							<img  class="image gallery-grid" src="img/lifestyle/lifestyle_12.jpg" alt="">
-						</div>
-
-
-
-
-						<!-- <div class="col-4" style="text-align: center;">
-							<img width="380" class="image gallery-grid" src="img/lifestyle/lifestyle_09.jpg" alt="">
-						</div>
-						<div class="col-4" style="text-align: center;">
-							<img width="380" class="image gallery-grid" src="img/lifestyle/lifestyle_10.jpg" alt="">
-						</div> -->
-
-
+						<!-- Portfolio item -->
+						<article class="portfolio col-xs-12 col-sm-6 col-md-4">
+							<a href="" class="image" style="background-image: url(img/desarrollos/edpacifica_portada.jpg)"></a>
+						</article>
 
 
 					</div>
 
-					<!-- Pagination -->
-					<div class="pagination-row row">
-						<div class="col-12">
-
-							<ul class="pag">
-								<li><a href="#">Ver m&aacute;s</a></li>
-
-							</ul>
-
-						</div>
-					</div>
 
 				</div>
 
@@ -166,7 +137,43 @@
 
 			</div>
 
+			<!-- Portfolio full -->
+			<div id="jingenieros" class="portfolio-full portfolio-full-slidedown">
 
+				<!-- Portfolio description -->
+				<div class="portfolio-description">
+					<h3>José Ingenieros</h3>
+					<!-- <div class="icon-text">
+						<i class="fa fa-map-marker"></i>
+						<p>Buenos Aires - 250 M2</p>
+					</div>
+					<div class="icon-text">
+						<i class="fa fa-users"></i>
+						<p>Construcción: Insaco S.A</p>
+					</div> -->
+
+				</div>
+
+				<!-- Portfolio image slider -->
+				<div class="swiper swiper-container">
+
+					<div class="swiper-wrapper">
+
+						<!-- Slide -->
+						<div class="swiper-slide" style="background-image: url(img/desarrollos/jingenierios_01.jpg);"></div>
+						<div class="swiper-slide" style="background-image: url(img/desarrollos/jingenierios_02.jpg)"></div>
+						<div class="swiper-slide" style="background-image: url(img/desarrollos/jingenierios_03.jpg)"></div>
+						<div class="swiper-slide" style="background-image: url(img/desarrollos/jingenierios_04.jpg)"></div>
+
+					</div>
+
+					<!-- Slider navigation arrows -->
+					<a class="nav-arrow nav-left" href="#"></a>
+					<a class="nav-arrow nav-right" href="#"></a>
+
+				</div>
+
+			</div>
 
 		</div>
 
