--- a/portfolio.html
+++ b/portfolio.html
@@ -29,11 +29,6 @@
 
 	<body>
 
-		<!-- Preloader -->
-		<div id="preloader">
-			<div id="status"></div>
-		</div>
-
 		<!-- Overlay -->
 		<div id="overlay"></div>
 
@@ -255,12 +250,13 @@
 						<ul>
 							<li><a href="portfolio.html">Casas</a></li>
 							<li><a href="lifestyle.html">Lifestyle</a></li>
-							<li><a href="#">Desarollos</a></li>
+							<li><a href="desarollos.html">Desarollos</a></li>
 							<li><a href="#">El Estudio</a>	<ul>
 									<li><a href="quienesomos.html">Quienes Somos</a></li>
 									<li><a href="estudio.html">Fotos</a></li>
 								</ul>
 							</li>
+							<li><a href="#">Diseño de Interiores</a></li>
 							<li><a href="#">Contacto</a></li>
 							<li><a href="#">Instagram</a></li>
 
