--- a/estudio.html
+++ b/estudio.html
@@ -146,12 +146,13 @@
 						<ul>
 							<li><a href="portfolio.html" class="active">Casas</a></li>
 							<li><a href="lifestyle.html">Lifestyle</a></li>
-							<li><a href="#">Desarollos</a></li>
+							<li><a href="desarrollos.html">Desarollos</a></li>
 							<li><a href="#">El Estudio</a>	<ul>
 									<li><a href="quienesomos.html">Quienes Somos</a></li>
 									<li><a href="estudio.html">Fotos</a></li>
 								</ul>
 							</li>
+							<li><a href="#">Diseño de Interiores</a></li>
 							<li><a href="#">Contacto</a></li>
 							<li><a href="#">Instagram</a></li>
 
