--- a/estudio.html
+++ b/estudio.html
@@ -1,4 +1,4 @@
-<!doctype html>
+Desarrollos</a><!doctype html>
 <html lang="en-US">
 	<head>
 
@@ -143,7 +143,7 @@
 						<ul>
 							<li><a href="portfolio.html" class="active">Casas</a></li>
 							<li><a href="lifestyle.html">Lifestyle</a></li>
-							<li><a href="desarrollos.html">Desarollos</a></li>
+							<li><a href="desarrollos.html">Desarrollos</a></li>
 							<li><a href="#">El Estudio</a>	<ul>
 									<li><a href="quienesomos.html">Quienes Somos</a></li>
 									<li><a href="estudio.html">Fotos</a></li>
