--- a/lifestyle.html
+++ b/lifestyle.html
@@ -1,4 +1,4 @@
-<!doctype html>
+Desarrollos</a><!doctype html>
 <html lang="en-US">
 	<head>
 
@@ -29,7 +29,7 @@
 
 	<body>
 
-	
+
 		<!-- Overlay -->
 		<div id="overlay"></div>
 
@@ -140,7 +140,7 @@
 						<ul>
 							<li><a href="portfolio.html">Casas</a></li>
 							<li><a href="lifestyle.html">Lifestyle</a></li>
-							<li><a href="desarrollos.html">Desarollos</a></li>
+							<li><a href="desarrollos.html">Desarrollos</a></li>
 							<li><a href="#">El Estudio</a>	<ul>
 									<li><a href="quienesomos.html">Quienes Somos</a></li>
 									<li><a href="estudio.html">Fotos</a></li>
