--- a/portfolio.html
+++ b/portfolio.html
@@ -250,7 +250,7 @@
 						<ul>
 							<li><a href="portfolio.html">Casas</a></li>
 							<li><a href="lifestyle.html">Lifestyle</a></li>
-							<li><a href="desarrollos.html">Desarollos</a></li>
+							<li><a href="desarrollos.html">Desarrollos</a></li>
 							<li><a href="#">El Estudio</a>	<ul>
 									<li><a href="quienesomos.html">Quienes Somos</a></li>
 									<li><a href="estudio.html">Fotos</a></li>
