--- a/quienesomos.html
+++ b/quienesomos.html
@@ -21,7 +21,7 @@
 		<link rel="stylesheet" href="css/reset.css">
 		<link rel="stylesheet" href="css/bootstrap.min.css">
 		<link rel="stylesheet" href="css/font-awesome.min.css">
-		<link href="http://fonts.googleapis.com/css?family=Nunito+Sans:400,700|Oswald:400" rel="stylesheet" type="text/css">
+		<link href="https://fonts.googleapis.com/css?family=Nunito+Sans:400,700|Oswald:400" rel="stylesheet" type="text/css">
 		<link rel="stylesheet" href="css/idangerous.swiper.css">
 		<link rel="stylesheet" href="css/style.css">
 
