sumada la sección Contacto

--- a/estudio.html
+++ b/estudio.html
@@ -1,4 +1,4 @@
-Desarrollos</a><!doctype html>
+<!doctype html>
 <html lang="en-US">
 	<head>
 
@@ -78,38 +78,36 @@ Desarrollos</a><!doctype html>
 					<div class="isotope isotope-3 row">
 
 						<!-- Portfolio item -->
+
 						<article class="portfolio isotope-item col-6">
-							<a href="#estudio" class="image" style="background-image: url(img/team-images/estudio_01.jpg)"></a>
+							<a href="#estudio" class="image" style="background-image: url(img/team/estudio_02.jpg)"></a>
 						</article>
 						<article class="portfolio isotope-item col-6">
-							<a href="#estudio" class="image" style="background-image: url(img/team-images/estudio_02.jpg)"></a>
+							<a href="#estudio" class="image" style="background-image: url(img/team/estudio_03.jpg)"></a>
 						</article>
 						<article class="portfolio isotope-item col-6">
-							<a href="#estudio" class="image" style="background-image: url(img/team-images/estudio_03.jpg)"></a>
+							<a href="#estudio" class="image" style="background-image: url(img/team/estudio_04.jpg)"></a>
 						</article>
 						<article class="portfolio isotope-item col-6">
-							<a href="#estudio" class="image" style="background-image: url(img/team-images/estudio_04.jpg)"></a>
+							<a href="#estudio" class="image" style="background-image: url(img/team/estudio_05.jpg)"></a>
 						</article>
 						<article class="portfolio isotope-item col-6">
-							<a href="#estudio" class="image" style="background-image: url(img/team-images/estudio_05.jpg)"></a>
+							<a href="#estudio" class="image" style="background-image: url(img/team/estudio_06.jpg)"></a>
 						</article>
 						<article class="portfolio isotope-item col-6">
-							<a href="#estudio" class="image" style="background-image: url(img/team-images/estudio_06.jpg)"></a>
+							<a href="#estudio" class="image" style="background-image: url(img/team/estudio_07.jpg)"></a>
 						</article>
 						<article class="portfolio isotope-item col-6">
-							<a href="#estudio" class="image" style="background-image: url(img/team-images/estudio_07.jpg)"></a>
+							<a href="#estudio" class="image" style="background-image: url(img/team/estudio_08.jpg)"></a>
 						</article>
 						<article class="portfolio isotope-item col-6">
-							<a href="#estudio" class="image" style="background-image: url(img/team-images/estudio_08.jpg)"></a>
+							<a href="#estudio" class="image" style="background-image: url(img/team/estudio_09.jpg)"></a>
 						</article>
 						<article class="portfolio isotope-item col-6">
-							<a href="#estudio" class="image" style="background-image: url(img/team-images/estudio_09.jpg)"></a>
+							<a href="#estudio" class="image" style="background-image: url(img/team/estudio_10.jpg)"></a>
 						</article>
 						<article class="portfolio isotope-item col-6">
-							<a href="#estudio" class="image" style="background-image: url(img/team-images/estudio_10.jpg)"></a>
-						</article>
-						<article class="portfolio isotope-item col-6">
-							<a href="#estudio" class="image" style="background-image: url(img/team-images/estudio_11.jpg)"></a>
+							<a href="#estudio" class="image" style="background-image: url(img/team/estudio_11.jpg)"></a>
 						</article>
 
 
@@ -150,7 +148,7 @@ Desarrollos</a><!doctype html>
 								</ul>
 							</li>
 							<li><a href="#">Diseño de Interiores</a></li>
-							<li><a href="#">Contacto</a></li>
+							<li><a href="contacto.html">Contacto</a></li>
 							<li><a href="#">Instagram</a></li>
 
 						</ul>
@@ -189,19 +187,16 @@ Desarrollos</a><!doctype html>
 					<div class="swiper-wrapper">
 
 						<!-- Slide -->
-						<div class="swiper-slide" style="background-image: url(img/team-images/estudio_01.jpg)"></div>
-						<div class="swiper-slide" style="background-image: url(img/team-images/estudio_02.jpg)"></div>
-						<div class="swiper-slide" style="background-image: url(img/team-images/estudio_03.jpg)"></div>
-						<div class="swiper-slide" style="background-image: url(img/team-images/estudio_04.jpg)"></div>
-						<div class="swiper-slide" style="background-image: url(img/team-images/estudio_05.jpg)"></div>
-						<div class="swiper-slide" style="background-image: url(img/team-images/estudio_06.jpg)"></div>
-						<div class="swiper-slide" style="background-image: url(img/team-images/estudio_07.jpg)"></div>
-						<div class="swiper-slide" style="background-image: url(img/team-images/estudio_08.jpg)"></div>
-						<div class="swiper-slide" style="background-image: url(img/team-images/estudio_09.jpg)"></div>
-						<div class="swiper-slide" style="background-image: url(img/team-images/estudio_10.jpg)"></div>
-						<div class="swiper-slide" style="background-image: url(img/team-images/estudio_11.jpg)"></div>
-
-
+						<div class="swiper-slide" style="background-image: url(img/team/estudio_02.jpg)"></div>
+						<div class="swiper-slide" style="background-image: url(img/team/estudio_03.jpg)"></div>
+						<div class="swiper-slide" style="background-image: url(img/team/estudio_04.jpg)"></div>
+						<div class="swiper-slide" style="background-image: url(img/team/estudio_05.jpg)"></div>
+						<div class="swiper-slide" style="background-image: url(img/team/estudio_06.jpg)"></div>
+						<div class="swiper-slide" style="background-image: url(img/team/estudio_07.jpg)"></div>
+						<div class="swiper-slide" style="background-image: url(img/team/estudio_08.jpg)"></div>
+						<div class="swiper-slide" style="background-image: url(img/team/estudio_09.jpg)"></div>
+						<div class="swiper-slide" style="background-image: url(img/team/estudio_10.jpg)"></div>
+						<div class="swiper-slide" style="background-image: url(img/team/estudio_11.jpg)"></div>
 
 
 					</div>
