--- a/portfolio.html
+++ b/portfolio.html
@@ -257,7 +257,7 @@
 								</ul>
 							</li>
 							<li><a href="#">Diseño de Interiores</a></li>
-							<li><a href="#">Contacto</a></li>
+							<li><a href="contacto.html">Contacto</a></li>
 							<li><a href="#">Instagram</a></li>
 
 						</ul>
