--- a/lifestyle.html
+++ b/lifestyle.html
@@ -147,7 +147,7 @@ Desarrollos</a><!doctype html>
 								</ul>
 							</li>
 							<li><a href="#">Diseño de Interiores</a></li>
-							<li><a href="#">Contacto</a></li>
+							<li><a href="contacto.html">Contacto</a></li>
 							<li><a href="#">Instagram</a></li>
 
 						</ul>
