--- a/quienesomos.html
+++ b/quienesomos.html
@@ -218,7 +218,7 @@
 								</ul>
 							</li>
 							<li><a href="#">Diseño de Interiores</a></li>
-							<li><a href="#">Contacto</a></li>
+							<li><a href="contacto.html">Contacto</a></li>
 							<li><a href="#">Instagram</a></li>
 
 						</ul>
