--- a/lifestyle.html
+++ b/lifestyle.html
@@ -1,4 +1,4 @@
-Desarrollos</a><!doctype html>
+<!doctype html>
 <html lang="en-US">
 	<head>
 
@@ -58,7 +58,7 @@ Desarrollos</a><!doctype html>
 			<div id="content" class="isotope-container">
 
 				<!-- Fluid container -->
-				<div class="container-fluid">
+				<div class="container">
 
 					<!-- Page heading -->
 					<div id="heading" class="row">
@@ -74,39 +74,32 @@ Desarrollos</a><!doctype html>
 					</div>
 
 					<!-- Main content -->
-					<div class="row">
-
-
-
-
-						<div class="col-6" style="text-align: center;">
-							<img  class="image gallery-grid" src="img/lifestyle/lifestyle_09.jpg" alt="">
-						</div>
-						<div class="col-6" style="text-align: center;">
-							<img  class="image gallery-grid" src="img/lifestyle/lifestyle_10.jpg" alt="">
-						</div>
-						<div class="col-3" style="text-align: center;">
-							<img height="660" class="image gallery-grid" src="img/lifestyle/lifestyle_02.jpg" alt="">
-						</div>
-						<div class="col-3" style="text-align: center;">
-							<img height="660" class="image gallery-grid" src="img/lifestyle/lifestyle_06.jpg" alt="">
-						</div>
-						<div class="col-6" style="text-align: center;">
-							<img  class="image gallery-grid" src="img/lifestyle/lifestyle_11.jpg" alt="">
-						</div>
-						<div class="col-6" style="text-align: center;">
-							<img  class="image gallery-grid" src="img/lifestyle/lifestyle_12.jpg" alt="">
+					<div class="grid-gallery">
+						<div class="col-gallery">
+							<img  src="./img/lifestyle/ls_01.jpg" alt="">
+							<img  src="./img/lifestyle/ls_02.jpg" alt="">
+							<img  src="./img/lifestyle/ls_03.jpg" alt="">
+							<img  src="./img/lifestyle/ls_04.jpg" alt="">
+							<img  src="./img/lifestyle/ls_05.jpg" alt="">
+							<img  src="./img/lifestyle/ls_06.jpg" alt="">
 						</div>
 
-
-
-
-						<!-- <div class="col-4" style="text-align: center;">
-							<img width="380" class="image gallery-grid" src="img/lifestyle/lifestyle_09.jpg" alt="">
+						<div class="col-gallery">
+							<img  src="./img/lifestyle/ls_07.jpg" alt="">
+							<img  src="./img/lifestyle/ls_08.jpg" alt="">
+							<img  src="./img/lifestyle/ls_09.jpg" alt="">
+							<img  src="./img/lifestyle/ls_10.jpg" alt="">
+							<img  src="./img/lifestyle/ls_11.jpg" alt="">
+							<img  src="./img/lifestyle/ls_12.jpg" alt="">
 						</div>
-						<div class="col-4" style="text-align: center;">
-							<img width="380" class="image gallery-grid" src="img/lifestyle/lifestyle_10.jpg" alt="">
-						</div> -->
+						<div class="col-gallery">
+							<img  src="./img/lifestyle/ls_13.jpg" alt="">
+							<img  src="./img/lifestyle/ls_14.jpg" alt="">
+							<img  src="./img/lifestyle/ls_15.jpg" alt="">
+							<img  src="./img/lifestyle/ls_16.jpg" alt="">
+							<img  src="./img/lifestyle/ls_17.jpg" alt="">
+							<img  src="./img/lifestyle/ls_18.jpg" alt="">
+						</div>
 
 
 
