--- a/interiores.html
+++ b/interiores.html
@@ -4,7 +4,7 @@
 
 		<!-- Meta -->
 		<meta charset="UTF-8">
-		<title>PACIFICA | Desarrollos</title>
+		<title>PACIFICA | Diseño de Interiores</title>
 		<meta name="keywords" content="Pacifica, Arquitectura, Ezequiel Gil">
 		<meta name="description" content="Pacifica - Estudio de Arquitectura">
 		<meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1">
@@ -29,6 +29,7 @@
 
 	<body>
 
+
 		<!-- Overlay -->
 		<div id="overlay"></div>
 
@@ -40,7 +41,7 @@
 
 			<!-- Logo -->
 			<header id="logo">
-								<a href="index.html"><img src="img/logo.png" alt=""></a>
+							<a href="index.html"><img src="img/logo.png" alt=""></a>
 				<!-- <h1>Pacifica</h1>
 				<h2>Ezequiel Gil <strong>Arquitecto</strong></h2> -->
 			</header>
@@ -57,45 +58,61 @@
 			<div id="content" class="isotope-container">
 
 				<!-- Fluid container -->
-				<div class="container-fluid">
+				<div class="container">
 
 					<!-- Page heading -->
 					<div id="heading" class="row">
 						<div class="filter col-12">
 
 							<header>
-								<h1>Desarrollos</h1>
-								<h2></h2>
+								<h1>Diseño de Interiores</h1>
+								<h2>Verónica Jijena Sánchez</h2>
 							</header>
-
 
 
 						</div>
 					</div>
 
 					<!-- Main content -->
-					<div class=" row">
+					<div class="grid-gallery">
+						<div class="col-gallery">
+							<img  src="./img/interiores/di_01.jpg" alt="">
+							<img  src="./img/interiores/di_02.jpg" alt="">
+							<img  src="./img/interiores/di_03.jpg" alt="">
+							<img  src="./img/interiores/di_04.jpg" alt="">
 
-						<!-- Portfolio item -->
-						<article class="portfolio col-xs-12 col-sm-6 col-md-4">
-							<a href="#jingenieros" class="image" style="background-image: url(img/desarrollos/jingenierios_portada.jpg)"></a>
-						</article>
+						</div>
 
-						<!-- Portfolio item -->
-						<article class="portfolio col-xs-12 col-sm-6 col-md-4">
-							<a href="" class="image" style="background-image: url(img/desarrollos/brasil_portada.jpg)"></a>
-						</article>
+						<div class="col-gallery">
+							<img  src="./img/interiores/di_07.jpg" alt="">
+							<img  src="./img/interiores/di_08.jpg" alt="">
+							<img  src="./img/interiores/di_09.jpg" alt="">
+							<img  src="./img/interiores/di_10.jpg" alt="">
 
-						<!-- Portfolio item -->
-						<article class="portfolio col-xs-12 col-sm-6 col-md-4">
-							<a href="" class="image" style="background-image: url(img/desarrollos/rincon_portada.jpg)"></a>
-						</article>
+						</div>
+						<div class="col-gallery">
+							<img  src="./img/interiores/di_13.jpg" alt="">
+							<img  src="./img/interiores/di_14.jpg" alt="">
+							<img  src="./img/interiores/di_15.jpg" alt="">
+							<img  src="./img/interiores/di_16.jpg" alt="">
 
-						<!-- Portfolio item -->
-						<article class="portfolio col-xs-12 col-sm-6 col-md-4">
-							<a href="" class="image" style="background-image: url(img/desarrollos/edpacifica_portada.jpg)"></a>
-						</article>
+						</div>
 
+
+
+
+					</div>
+
+					<!-- Pagination -->
+					<div class="pagination-row row">
+						<div class="col-12">
+
+							<ul class="pag">
+								<li><a href="#">Ver m&aacute;s</a></li>
+
+							</ul>
+
+						</div>
 					</div>
 
 				</div>
@@ -134,6 +151,7 @@
 				</div>
 
 			</div>
+
 			<footer class="footer-section">
 	        <div class="container">
 	            <div class="footer-cta pt-5 pb-5">
@@ -230,43 +248,7 @@
 	        </div>
 	    </footer>
 
-			<!-- Portfolio full -->
-			<div id="jingenieros" class="portfolio-full portfolio-full-slidedown">
 
-				<!-- Portfolio description -->
-				<div class="portfolio-description">
-					<h3>José Ingenieros</h3>
-					<!-- <div class="icon-text">
-						<i class="fa fa-map-marker"></i>
-						<p>Buenos Aires - 250 M2</p>
-					</div>
-					<div class="icon-text">
-						<i class="fa fa-users"></i>
-						<p>Construcción: Insaco S.A</p>
-					</div> -->
-
-				</div>
-
-				<!-- Portfolio image slider -->
-				<div class="swiper swiper-container">
-
-					<div class="swiper-wrapper">
-
-						<!-- Slide -->
-						<div class="swiper-slide" style="background-image: url(img/desarrollos/jingenierios_01.jpg);"></div>
-						<div class="swiper-slide" style="background-image: url(img/desarrollos/jingenierios_02.jpg)"></div>
-						<div class="swiper-slide" style="background-image: url(img/desarrollos/jingenierios_03.jpg)"></div>
-						<div class="swiper-slide" style="background-image: url(img/desarrollos/jingenierios_04.jpg)"></div>
-
-					</div>
-
-					<!-- Slider navigation arrows -->
-					<a class="nav-arrow nav-left" href="#"></a>
-					<a class="nav-arrow nav-right" href="#"></a>
-
-				</div>
-
-			</div>
 
 		</div>
 
